备份更改博客链接名的操作

--- a/source/_posts/旅游杂谈-泰国.markdown
+++ b/source/_posts/旅游杂谈-泰国.markdown
@@ -1,3 +1,4 @@
+---
 title: 旅游杂谈-泰国
 author: tyrantqiao
 categories: []
@@ -6,6 +7,7 @@ copyright: true
 tags:
   - 随笔
   - 旅游
+abbrlink: 6ad518ea
 date: 2019-04-21 09:44:00
 ---
 
